--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <button onclick="showAlert()">Launch Alert</button>
-    <button onclick="showConfirm()">Launch confirm</button>
+    <button onclick="askSomething()">Ask something</button>
     <script src="prompt.js"></script>
 </body>
 </html>
