--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <button onclick="showAlert()">Launch Alert</button>
     <button onclick="askSomething()">Ask something</button>
+    <button onclick="getUserInfo()">Get Info</button>
     <script src="prompt.js"></script>
 </body>
 </html>
